Fixed a spacing issue

--- a/src/style/new-releases.scss
+++ b/src/style/new-releases.scss
@@ -5,6 +5,7 @@
     height: calc(100vh + px);
     width: 100%;
     padding-top: 30px;
+    padding-bottom: 20px;
     
 
      
@@ -35,8 +36,8 @@
     .new-release-btn-link-wrapper{
         display: flex;
         flex-direction: column;
-        padding: 20px;
-        padding-right: 80px;
+        padding: 40px;
+        padding-right: 95px;
     
 
     .smaller-btn-link-wrapper {
